# blender_pso2_tools

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  global.json  pyproject.toml  requirements-dev.txt
pso2_tools/: __init__.py  blender_manifest.toml  ccl.py  colors.py  datafile.py  dotnet.py  export_aqp.py  export_model.py  fbx_wrapper.py  ice.py  import_aqp.py  import_ice.py  import_model.py  import_props.py  import_search.py  material.py  mesh.py  objects.py  objects_aqp.py  parts.py  preferences.py  scene_props.py  util.py  watcher.py
pso2_tools/operators/: __init__.py  rename_bones.py
pso2_tools/panels/: appearance.py  mesh.py  ornaments.py
pso2_tools/shaders/: __init__.py  attributes.py  builder.py  colorize.py  colors.py  group.py  mix.py  ngs.py  shader_0100.py  shader_1100.py  shader_1101.py  shader_1102.py  shader_1103.py  shader_1104.py  shader_1105.py  shader_1109.py  shader_1110.py  shader_1117.py  types.py
scripts/: blender.py  build_bin.py  build_package.py  build_typings.py  install.py  wheels.py
